# complex_ai

./: LICENSE  README.md
backend/: .gitignore  .pylintrc  __init__.py,  manage.py  pyproject.toml
backend/models/: AAPL.keras  AMZN.keras  GOOGL.keras  META.keras  MSFT.keras
backend/src/: App .tsx
backend/src/authentication/: urls.py  views.py
backend/src/complex_ai/: asgi.py  consumers.py  routing.py  settings.py  urls.py
backend/src/markets/: apps.py  prediction.py  services.py  urls.py  views.py
backend/stock_script/: database_migration.sql  finnhub_ingest3.py  stockanalyzer.py
docs/: software_plan.md
frontend/: package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: Main.tsx  index.js  index.tsx
frontend/src/components/: StockCard.tsx
frontend/src/hooks/: useQuote.ts
