[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/matee8/complex_ai"
Repository = "https://github.com/matee8/complex_ai"
Issues = "https://github.com/matee8/complex_ai/issues"
