[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0.0, <6.0.0",
    "django-cors-headers>=4.0.0, <5.0.0",
    "djangorestframework>=3.0.0, <4.0.0",
    "djangorestframework-simplejwt>=5.0.0, <6.0.0",
    "numpy>=2.0.0, <3.0.0",
    "tensorflow>=2.0.0, <3.0.0",
    "yfinance>=0.2.0, <0.3.0",
]

[project.urls]
Homepage = "https://github.com/matee8/complex_ai"
Repository = "https://github.com/matee8/complex_ai"
Issues = "https://github.com/matee8/complex_ai/issues"

[dependency-groups]
dev = [
    "pylint>=4.0.3",
    "yapf>=0.43.0",
]
